# guichet

./: .gitignore  guichet.py  pyproject.toml  readme.md  setup.py
guichet/: __init__.py  guichet.py
tests/: test_guichet.py
